change text in notification email

--- a/parladata/templates/daily_notification.html
+++ b/parladata/templates/daily_notification.html
@@ -7,7 +7,7 @@
     </div>
     <div>
         {% if new_motions %}
-            There are new motions in Parlameter, that you have to check:</br></br>
+            New motions were added during the night:</br></br>
             <a href="{{ base_url }}{% url 'admin:parladata_motion_changelist' %}">Check new motions</a>
             </br></br>
         {% endif %}
