--- a/parladata/templates/public_question_email.html
+++ b/parladata/templates/public_question_email.html
@@ -1,17 +1,17 @@
 {% load i18n %}
 <html lang="hr">
 <body>
-    <div>
-        {% translate 'Question for: ' %}{{ person_name }}</br>
+    <p>
+        {% translate 'Question for: ' %}{{ person_name }}</br></br>
         {% translate 'The following question was asked to you on the Parlameter platform.' %}</br>
-        {% translate 'Please reply to this email and we will publish your reply.' %}</br>
-    </div>
-    <div>
-        {{ text }}
-    </div>
-    <div>
+        {% translate 'Please reply to this email and we will publish your reply.' %}</br></br>
+    </p>
+    <p>
+        {{ text }}</br>
+    </p>
+    <p>
         {% translate 'Thank you in advance' %}</br>
         {% translate 'Team Parlameter' %}
-    </div>
+    </p>
 </body>
 </html>
