fix notifications email links

--- a/parlanotifications/templates/add_keyword.html
+++ b/parlanotifications/templates/add_keyword.html
@@ -9,7 +9,7 @@
 <div class="dndkeywordauthorsession" style="color: #222222; font-family: Arial; font-size: 14px; line-height: 18px;">
 	{% trans 'Živjo' %}, <br/><br/>
 	{% trans 'Na ta e-naslov je nekdo prijavil Parlameter obvestila za ključno besedo' %} "<strong>{{ keyword }}</strong>". {% trans 'Če si bil/-a to ti, potrdi naročilo s klikom na povezavo:' %} <br/>
-	<a href="{% trans 'https://obvestila.parlameter.si/settings/' %}?uuid={{ uuid }}&kid={{ kid }}" style="color: #222222; font-family: Arial; font-size: 14px;"><u>{% trans 'https://obvestila.parlameter.si/' %}{{ keyword }}</u></a> <br/><br/>
+	<a href="{% trans 'https://parlacards-slovenija.lb.djnd.si/tools/notifications/?id=undefined&no_card_data=true&locale=sl&template=share&action=confirm' %}&uuid={{ uuid }}&kid={{ kid }}" style="color: #222222; font-family: Arial; font-size: 14px;"><u>{% trans 'https://parlacards-slovenija.lb.djnd.si/tools/notifications/?id=undefined&no_card_data=true&locale=sl&template=share&action=confirm' %}&uuid={{ uuid }}&kid={{ kid }}</u></a> <br/><br/>
 	{% trans 'Srečno' %},<br/>
 	{% trans 'ekipa Parlametra' %}
 </div>
