fixed notification email content and pagination

--- a/parlanotifications/templates/notification.html
+++ b/parlanotifications/templates/notification.html
@@ -13,7 +13,7 @@
 	<div class="dndkeywordalert" style="padding-left: 40px; padding-bottom: 20px;">
 	<div class="dndkeyworddate" style="color: #999999; font-family: Arial; font-size: 11px;">{{ speech.date|date:"d. m. Y"}}</div>
 	<div class="dndkeywordauthorsession" style="color: #999999; font-family: Arial; font-size: 14px;">{{ speech.speaker_name }}, {{ speech.session_name }}</div><br/>
-	<div style="color: #222222; font-family: Arial; font-size: 12px; text-decoration: underline;"><a href="{% trans 'https://parlameter.si/seja/' %}{{ speech.session_id }}/{% trans 'transkript-url' %}/page={{ speech.order }}#{{ speech.id }}">{{data.content|safe}}</a></div><br/>
+	<div style="color: #222222; font-family: Arial; font-size: 12px; text-decoration: underline;"><a href="{% trans 'https://parlameter.si/seja/' %}{{ speech.session_id }}/{% trans 'transkript-url' %}?page={{ speech.order }}#{{ speech.id }}">{{speech.content|safe}}</a></div><br/>
 	</div>
 	<p>
 	{% endfor %}
